--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,12 @@
     "angular-route": "1.2.16",
     "bourbon": "~4.0.2",
     "neat": "~1.6.0",
-    "bitters": "~0.10.0"
+    "bitters": "~0.10.0",
+    "angular-mocks": "~1.2.22",
+    "angular-translate": "~2.2.0",
+    "angular-translate-loader-url": "~2.2.0",
+    "angular-translate-loader-partial": "~2.0.1",
+    "angular-translate-loader-static-files": "~2.2.0"
   },
   "devDependencies": {
     "angular-mocks": "1.2.16",
