--- a/bower.json
+++ b/bower.json
@@ -16,9 +16,7 @@
     "bitters": "~0.10.0",
     "angular-mocks": "~1.2.22",
     "angular-translate": "~2.2.0",
-    "angular-translate-loader-url": "~2.2.0",
-    "angular-translate-loader-partial": "~2.0.1",
-    "angular-translate-loader-static-files": "~2.2.0"
+    "angular-ui-router": "~0.2.10"
   },
   "devDependencies": {
     "angular-mocks": "1.2.16",
