--- a/bower.json
+++ b/bower.json
@@ -8,19 +8,24 @@
     "angular-resource": "1.2.16",
     "angular-cookies": "1.2.16",
     "angular-sanitize": "1.2.16",
-    "angular-animate": "1.2.16",
+    "angular-animate": "~1.2.22",
     "angular-touch": "1.2.16",
     "angular-route": "1.2.16",
-    "bourbon": "~4.0.2",
-    "neat": "~1.6.0",
-    "bitters": "~0.10.0",
     "angular-mocks": "~1.2.22",
     "angular-translate": "~2.2.0",
-    "angular-ui-router": "~0.2.10"
+    "angular-ui-router": "~0.2.10",
+    "components-font-awesome": "~4.1.0",
+    "bourbon": "~4.0.2",
+    "neat": "~1.6.0",
+    "bitters": "~0.10.0"
   },
   "devDependencies": {
     "angular-mocks": "1.2.16",
     "angular-scenario": "1.2.16"
   },
-  "appPath": "app"
+  "appPath": "app",
+  "resolutions": {
+    "angular": "1.2.22",
+    "angular-animate": "~1.2.22"
+  }
 }
