Add search filter dropdown directive and fix base styling for header search and side menu

--- a/bower.json
+++ b/bower.json
@@ -25,7 +25,6 @@
   },
   "appPath": "app",
   "resolutions": {
-    "angular": "1.2.22",
-    "angular-animate": "~1.2.22"
+    "angular": "1.2.22"
   }
 }
