Add karma for test based development and update the readme file with new details

--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "grunt-wiredep": "^1.7.0",
     "jshint-stylish": "^0.2.0",
     "load-grunt-tasks": "^0.4.0",
-    "time-grunt": "^0.3.1"
+    "time-grunt": "^0.3.1",
+    "karma": "^0.12.22",
+    "karma-phantomjs-launcher": "^0.1.4",
+    "karma-jasmine": "^0.1.5"
   },
   "engines": {
     "node": ">=0.10.0"
