--- a/package.json
+++ b/package.json
@@ -32,12 +32,15 @@
     "karma-jasmine": "^0.1.5",
     "grunt-karma": "^0.8.3",
     "karma-chrome-launcher": "^0.1.4",
-    "ng-midway-tester": "^2.0.5"
+    "ng-midway-tester": "^2.0.5",
+    "karma-coverage": "^0.2.6",
+    "coveralls": "^2.11.1"
   },
   "engines": {
     "node": ">=0.10.0"
   },
   "scripts": {
-    "test": "grunt test"
+    "test": "grunt test",
+	"coveralls": "cat ./coverage/*/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
   }
 }
