--- a/test/.jshintrc
+++ b/test/.jshintrc
@@ -7,12 +7,13 @@
   "curly": true,
   "eqeqeq": true,
   "immed": true,
-  "indent": 2,
+  "indent": 4,
   "latedef": true,
   "newcap": true,
   "noarg": true,
   "quotmark": "single",
   "regexp": true,
+  "expr": true,
   "undef": true,
   "unused": true,
   "strict": true,
@@ -30,7 +31,8 @@
     "inject": false,
     "it": false,
     "jasmine": false,
-    "spyOn": false
+    "spyOn": false,
+	"sinon": false
   }
 }
 
