--- a/package.json
+++ b/package.json
@@ -48,6 +48,6 @@
   },
   "scripts": {
     "test": "grunt test",
-    "coveralls": "cat ./coverage/*/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
+    "coveralls": "cat ./reports/coverage/*/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
   }
 }
