Add listing of scenarios and styling to the available section and a working tag filter

--- a/.scss-lint.yml
+++ b/.scss-lint.yml
@@ -60,7 +60,7 @@ linters:
     style: exclude_zero # or 'include_zero'
 
   MergeableSelector:
-    enabled: true
+    enabled: false
     force_nesting: true
 
   NameFormat:
@@ -80,7 +80,7 @@ linters:
 
   SelectorDepth:
     enabled: true
-    max_depth: 5
+    max_depth: 8
 
   Shorthand:
     enabled: true
