--- a/package.json
+++ b/package.json
@@ -1,6 +1,15 @@
 {
   "name": "finq",
+  "author": "Christian Kramer <cmkramer@gmail.com>",
+  "homepage": "http://finq.io",
   "version": "0.0.0",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/topicusfinan/finq-webclient.git"
+  },
+  "bugs": {
+    "url": "https://github.com/topicusfinan/finq-webclient/issues"
+  },
   "dependencies": {},
   "devDependencies": {
     "grunt": "^0.4.1",
@@ -20,7 +29,7 @@
     "grunt-filerev": "^0.2.1",
     "grunt-google-cdn": "^0.4.0",
     "grunt-newer": "^0.7.0",
-    "grunt-ngmin": "^0.0.3",
+    "grunt-ng-annotate": "^0.3.0",
     "grunt-svgmin": "^0.4.0",
     "grunt-usemin": "^2.1.1",
     "grunt-wiredep": "^1.7.0",
