--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "karma-sinon-chai": "^0.2.0",
     "chai": "^1.9.1",
     "chai-as-promised": "^4.1.1",
-    "grunt-scss-lint": "^0.3.3"
+    "grunt-scss-lint": "^0.3.3",
+    "google-cdn-data": "^0.1.8"
   },
   "engines": {
     "node": ">=0.10.0"
