Add pagination support to dropdown select lists in case of many items

--- a/app/scripts/config.json
+++ b/app/scripts/config.json
@@ -2,6 +2,7 @@
     "address" : "",
     "searchWait": 250,
     "pagination": {
-        "maxScenarios": 1000
+        "maxScenarios": 1000,
+        "maxSelectDropdownItems": 8
     }
 }
