Add support for user feedback and add tests for feedback and running scenarios

--- a/app/scripts/config.json
+++ b/app/scripts/config.json
@@ -1,6 +1,7 @@
 {
     "address" : "",
     "searchWait": 250,
+    "feedbackTimeout": 7000,
     "pagination": {
         "maxScenarios": 1000,
         "maxSelectDropdownItems": 8
