Add story run service logic and a subscription stub, also add queuing logic to the feedback controller

--- a/app/scripts/config.json
+++ b/app/scripts/config.json
@@ -1,7 +1,9 @@
 {
     "address" : "",
     "searchWait": 250,
-    "feedbackTimeout": 7000,
+    "feedbackTimeout": 6000,
+    "feedbackQueueTimeout": 3000,
+    "minFeedbackTimeout": 1000,
     "pagination": {
         "maxScenarios": 1000,
         "maxSelectDropdownItems": 8
