Implement communication between modules including menu badges
- also fixes a timeout issue with user feedback and adjusts tests to work with the angular $timeout
- and splits up constants in separate files for better maintainability

--- a/app/scripts/config.json
+++ b/app/scripts/config.json
@@ -1,9 +1,10 @@
 {
     "address" : "",
     "searchWait": 250,
-    "feedbackTimeout": 6000,
+    "feedbackTimeout": 5000,
     "feedbackQueueTimeout": 2000,
     "minFeedbackTimeout": 1000,
+    "maxSearchResults": 1000,
     "pagination": {
         "maxScenarios": 1000,
         "maxSelectDropdownItems": 8
