--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,8 @@
     "bourbon": "~4.0.2",
     "neat": "~1.6.0",
     "bitters": "~0.10.0",
-    "angular-typeahead": "~0.2.1"
+    "angular-typeahead": "~0.2.1",
+    "angular-socket-io": "~0.6.0"
   },
   "devDependencies": {
     "angular-mocks": "1.2.16",
