--- a/app/scripts/config.json
+++ b/app/scripts/config.json
@@ -2,12 +2,15 @@
     "address" : "",
     "socketEndpoint" : "",
     "searchWait": 250,
-    "feedbackTimeout": 5000,
-    "feedbackQueueTimeout": 2000,
-    "minFeedbackTimeout": 1000,
     "maxSearchResults": 1000,
     "pagination": {
         "maxScenarios": 1000,
         "maxSelectDropdownItems": 4
+    },
+    "feedback" : {
+        "replaceTime": 150,
+        "cleanTimeout": 5000,
+        "queueTimeout": 2000,
+        "minTimeout": 1000
     }
 }
