--- a/bower.json
+++ b/bower.json
@@ -19,9 +19,7 @@
     "neat": "~1.6.0",
     "bitters": "~0.10.0",
     "angular-typeahead": "~0.2.1",
-    "angular-socket-io": "~0.6.0",
-	"showdown": "~0.3.1",
-    "angular-markdown-directive": "~0.3.0"
+    "angular-socket-io": "~0.6.0"
   },
   "devDependencies": {
     "angular-mocks": "1.3.0",
