Add a value service for global values and add stubs for the report history controller

--- a/app/scripts/config.json
+++ b/app/scripts/config.json
@@ -39,14 +39,16 @@
                 "reportsPerRequest": 50,
                 "maxTotalReports": 500,
                 "multiplePages": true
+            },
+            "client": {
+                "reportsPerPage": 80
             }
         }
     },
     "available": {
         "pagination": {
             "client": {
-                "scenariosPerPage": 80,
-                "selectDropdownItemsPerPage": 4
+                "scenariosPerPage": 80
             }
         }
     },
