--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
     "components-font-awesome": "~4.1.0",
     "bourbon": "~4.0.2",
     "neat": "~1.6.0",
-    "angular-typeahead": "~0.2.1"
+    "angular-typeahead": "~0.2.1",
+    "hint.css": "~1.3.3"
   },
   "devDependencies": {
     "angular-mocks": "1.3.0",
