Add current user to layout which displays firstname, lastname and user image using gravatar

--- a/app/scripts/config.json
+++ b/app/scripts/config.json
@@ -1,6 +1,7 @@
 {
     "address": "",
     "authAddress": "",
+    "defaultUserImage": "mm",
     "socket": {
         "endpoint": "",
         "reconnectAttempts": 10,
