--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,8 @@
     "bourbon": "~4.0.2",
     "neat": "~1.6.0",
     "angular-typeahead": "~0.2.1",
-    "hint.css": "~1.3.3"
+    "hint.css": "~1.3.3",
+    "angular-md5": "~0.1.7"
   },
   "devDependencies": {
     "angular-mocks": "1.3.6",
