--- a/bower.json
+++ b/bower.json
@@ -1,32 +1,30 @@
 {
-  "name": "finq",
-  "version": "0.0.0",
-  "dependencies": {
-    "angular": "1.3.6",
-    "json3": "~3.3.1",
-    "es5-shim": "~3.1.0",
-    "angular-resource": "1.3.6",
-    "angular-cookies": "1.3.6",
-    "angular-sanitize": "1.3.6",
-    "angular-animate": "~1.3.6",
-    "angular-touch": "1.3.6",
-    "angular-route": "1.3.6",
-    "angular-mocks": "~1.3.6",
-    "angular-translate": "~2.2.0",
-    "angular-ui-router": "~0.2.10",
-    "components-font-awesome": "~4.1.0",
-    "bourbon": "~4.0.2",
-    "neat": "~1.6.0",
-    "angular-typeahead": "~0.2.1",
-    "hint.css": "~1.3.3",
-    "angular-md5": "~0.1.7"
-  },
-  "devDependencies": {
-    "angular-mocks": "1.3.6",
-    "angular-scenario": "1.3.6"
-  },
-  "appPath": "app",
-  "resolutions": {
-    "angular": "1.3.6"
-  }
+    "name": "finq",
+    "version": "0.0.0",
+    "dependencies": {
+        "angular": "1.3.6",
+        "json3": "~3.3.1",
+        "es5-shim": "~3.1.0",
+        "angular-resource": "1.3.6",
+        "angular-cookies": "1.3.6",
+        "angular-sanitize": "1.3.6",
+        "angular-animate": "~1.3.6",
+        "angular-touch": "1.3.6",
+        "angular-route": "1.3.6",
+        "angular-mocks": "~1.3.6",
+        "angular-translate": "~2.2.0",
+        "angular-ui-router": "~0.2.10",
+        "angular-md5": "*",
+        "components-font-awesome": "~4.1.0",
+        "angular-typeahead": "~0.2.1",
+        "hint.css": "~1.3.3"
+    },
+    "devDependencies": {
+        "angular-mocks": "1.3.6",
+        "angular-scenario": "1.3.6"
+    },
+    "appPath": "app",
+    "resolutions": {
+        "angular": "1.3.6"
+    }
 }
