--- a/package.json
+++ b/package.json
@@ -1,62 +1,60 @@
 {
-  "name": "finq",
-  "author": "Christian Kramer <cmkramer@gmail.com>",
-  "homepage": "http://finq.io",
-  "version": "0.0.0",
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/topicusfinan/finq-webclient.git"
-  },
-  "bugs": {
-    "url": "https://github.com/topicusfinan/finq-webclient/issues"
-  },
-  "dependencies": {},
-  "devDependencies": {
-    "grunt": "^0.4.1",
-    "grunt-autoprefixer": "^0.7.3",
-    "grunt-concurrent": "^0.5.0",
-    "grunt-contrib-clean": "^0.5.0",
-    "grunt-contrib-concat": "^0.4.0",
-    "grunt-contrib-connect": "^0.7.1",
-    "grunt-contrib-copy": "^0.5.0",
-    "grunt-contrib-cssmin": "^0.9.0",
-    "grunt-contrib-htmlmin": "^0.3.0",
-    "grunt-contrib-imagemin": "^0.7.0",
-    "grunt-contrib-jshint": "^0.10.0",
-    "grunt-contrib-sass": "^0.7.4",
-    "grunt-contrib-uglify": "^0.4.0",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-filerev": "^0.2.1",
-    "grunt-google-cdn": "^0.4.0",
-    "grunt-newer": "^0.7.0",
-    "grunt-ng-annotate": "^0.3.0",
-    "grunt-svgmin": "^0.4.0",
-    "grunt-usemin": "^2.1.1",
-    "grunt-wiredep": "^1.7.0",
-    "jshint-stylish": "^0.2.0",
-    "load-grunt-tasks": "^0.4.0",
-    "time-grunt": "^0.3.1",
-    "karma": "^0.12.22",
-    "karma-phantomjs-launcher": "^0.1.4",
-    "grunt-karma": "^0.8.3",
-    "karma-chrome-launcher": "^0.1.4",
-    "karma-coverage": "^0.2.6",
-    "coveralls": "^2.11.1",
-    "mocha": "^1.21.4",
-    "karma-mocha": "^0.1.9",
-    "karma-chai": "^0.1.0",
-    "karma-sinon": "^1.0.3",
-    "karma-sinon-chai": "^0.2.0",
-    "chai": "^1.9.1",
-    "chai-as-promised": "^4.1.1",
-    "grunt-scss-lint": "^0.3.3",
-    "google-cdn-data": "^0.1.8"
-  },
-  "engines": {
-    "node": ">=0.10.0"
-  },
-  "scripts": {
-    "test": "grunt test",
-    "coveralls": "cat ./reports/coverage/*/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
-  }
+    "name": "finq",
+    "author": "Christian Kramer <cmkramer@gmail.com>",
+    "homepage": "http://finq.io",
+    "version": "0.0.0",
+    "repository": {
+        "type": "git",
+        "url": "git://github.com/topicusfinan/finq-webclient.git"
+    },
+    "bugs": {
+        "url": "https://github.com/topicusfinan/finq-webclient/issues"
+    },
+    "dependencies": {},
+    "devDependencies": {
+        "browser-sync": "2.1.6",
+        "chai": "^1.9.1",
+        "chai-as-promised": "^4.1.1",
+        "coveralls": "^2.11.2",
+        "del": "1.1",
+        "gulp": "3.8",
+        "gulp-autoprefixer": "2.1.0",
+        "gulp-compass": "2.0.3",
+        "gulp-concat": "2.5.0",
+        "gulp-csso": "1.0.0",
+        "gulp-if": "1.2.5",
+        "gulp-inject": "1.1.1",
+        "gulp-jshint": "1.9.2",
+        "gulp-ng-annotate": "0.5.2",
+        "gulp-notify": "2.2.0",
+        "gulp-rename": "1.2.0",
+        "gulp-ruby-sass": "1.0.0-alpha.3",
+        "gulp-sass": "1.3.3",
+        "gulp-scss-lint": "0.1.7",
+        "gulp-sourcemaps": "1.3.0",
+        "gulp-symlink": "2.1.0",
+        "gulp-uglify": "^1.1.0",
+        "jshint-stylish": "1.0.0",
+        "karma": "^0.12.22",
+        "karma-chai": "^0.1.0",
+        "karma-chrome-launcher": "^0.1.7",
+        "karma-coverage": "^0.2.6",
+        "karma-mocha": "^0.1.9",
+        "karma-phantomjs-launcher": "^0.1.4",
+        "karma-sinon": "^1.0.3",
+        "karma-sinon-chai": "^0.2.0",
+        "main-bower-files": "2.5.0",
+        "minimist": "1.1.0",
+        "mocha": "^1.21.4",
+        "node-bourbon": "1.2.3",
+        "node-neat": "1.4.2",
+        "wiredep": "2.2.2"
+    },
+    "engines": {
+        "node": ">=0.10.0"
+    },
+    "scripts": {
+        "test": "grunt test",
+        "coveralls": "cat ./reports/coverage/*/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
+    }
 }
