--- a/package.json
+++ b/package.json
@@ -1,60 +1,61 @@
 {
-    "name": "finq",
-    "author": "Christian Kramer <cmkramer@gmail.com>",
-    "homepage": "http://finq.io",
-    "version": "0.0.0",
-    "repository": {
-        "type": "git",
-        "url": "git://github.com/topicusfinan/finq-webclient.git"
-    },
-    "bugs": {
-        "url": "https://github.com/topicusfinan/finq-webclient/issues"
-    },
-    "dependencies": {},
-    "devDependencies": {
-        "browser-sync": "2.1.6",
-        "chai": "^1.9.1",
-        "chai-as-promised": "^4.1.1",
-        "coveralls": "^2.11.2",
-        "del": "1.1",
-        "gulp": "3.8",
-        "gulp-autoprefixer": "2.1.0",
-        "gulp-compass": "2.0.3",
-        "gulp-concat": "2.5.0",
-        "gulp-csso": "1.0.0",
-        "gulp-if": "1.2.5",
-        "gulp-inject": "1.1.1",
-        "gulp-jshint": "1.9.2",
-        "gulp-ng-annotate": "0.5.2",
-        "gulp-notify": "2.2.0",
-        "gulp-rename": "1.2.0",
-        "gulp-ruby-sass": "1.0.0-alpha.3",
-        "gulp-sass": "1.3.3",
-        "gulp-scss-lint": "0.1.7",
-        "gulp-sourcemaps": "1.3.0",
-        "gulp-symlink": "2.1.0",
-        "gulp-uglify": "^1.1.0",
-        "jshint-stylish": "1.0.0",
-        "karma": "^0.12.22",
-        "karma-chai": "^0.1.0",
-        "karma-chrome-launcher": "^0.1.7",
-        "karma-coverage": "^0.2.6",
-        "karma-mocha": "^0.1.9",
-        "karma-phantomjs-launcher": "^0.1.4",
-        "karma-sinon": "^1.0.3",
-        "karma-sinon-chai": "^0.2.0",
-        "main-bower-files": "2.5.0",
-        "minimist": "1.1.0",
-        "mocha": "^1.21.4",
-        "node-bourbon": "1.2.3",
-        "node-neat": "1.4.2",
-        "wiredep": "2.2.2"
-    },
-    "engines": {
-        "node": ">=0.10.0"
-    },
-    "scripts": {
-        "test": "grunt test",
-        "coveralls": "cat ./reports/coverage/*/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
-    }
+  "name": "finq",
+  "author": "Christian Kramer <cmkramer@gmail.com>",
+  "homepage": "http://finq.io",
+  "version": "0.0.0",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/topicusfinan/finq-webclient.git"
+  },
+  "bugs": {
+    "url": "https://github.com/topicusfinan/finq-webclient/issues"
+  },
+  "dependencies": {},
+  "devDependencies": {
+    "browser-sync": "2.1.6",
+    "chai": "^1.9.1",
+    "chai-as-promised": "^4.1.1",
+    "coveralls": "^2.11.2",
+    "del": "1.1",
+    "gulp": "3.8",
+    "gulp-autoprefixer": "2.1.0",
+    "gulp-compass": "2.0.3",
+    "gulp-concat": "2.5.0",
+    "gulp-csso": "1.0.0",
+    "gulp-if": "1.2.5",
+    "gulp-inject": "1.1.1",
+    "gulp-jshint": "1.9.2",
+    "gulp-ng-annotate": "0.5.2",
+    "gulp-notify": "2.2.0",
+    "gulp-rename": "1.2.0",
+    "gulp-ruby-sass": "1.0.0-alpha.3",
+    "gulp-sass": "1.3.3",
+    "gulp-scss-lint": "0.1.7",
+    "gulp-sourcemaps": "1.3.0",
+    "gulp-symlink": "2.1.0",
+    "gulp-uglify": "^1.1.0",
+    "gulp-util": "^3.0.3",
+    "jshint-stylish": "1.0.0",
+    "karma": "^0.12.22",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^0.1.7",
+    "karma-coverage": "^0.2.6",
+    "karma-mocha": "^0.1.9",
+    "karma-phantomjs-launcher": "^0.1.4",
+    "karma-sinon": "^1.0.3",
+    "karma-sinon-chai": "^0.2.0",
+    "main-bower-files": "2.5.0",
+    "minimist": "1.1.0",
+    "mocha": "^1.21.4",
+    "node-bourbon": "1.2.3",
+    "node-neat": "1.4.2",
+    "wiredep": "2.2.2"
+  },
+  "engines": {
+    "node": ">=0.10.0"
+  },
+  "scripts": {
+    "test": "grunt test",
+    "coveralls": "cat ./reports/coverage/*/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
+  }
 }
