--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "gulp-symlink": "2.1.0",
     "gulp-uglify": "^1.1.0",
     "gulp-util": "^3.0.3",
+    "gulp-watch": "^4.1.1",
     "jshint-stylish": "1.0.0",
     "karma": "^0.12.22",
     "karma-chai": "^0.1.0",
@@ -50,6 +51,7 @@
     "mocha": "^1.21.4",
     "node-bourbon": "1.2.3",
     "node-neat": "1.4.2",
+    "run-sequence": "^1.0.2",
     "wiredep": "2.2.2"
   },
   "engines": {
