--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "browser-sync": "2.1.6",
-    "chai": "^1.9.1",
+    "browser-sync": "^2.2.0",
+    "chai": "^2.0.0",
     "chai-as-promised": "^4.1.1",
     "coveralls": "^2.11.2",
     "del": "1.1",
@@ -44,11 +44,11 @@
     "karma-mocha": "^0.1.9",
     "karma-phantomjs-launcher": "^0.1.4",
     "karma-sinon": "^1.0.3",
-    "karma-sinon-chai": "^0.2.0",
+    "karma-sinon-chai": "^0.3.0",
     "main-bower-files": "2.5.0",
     "merge-stream": "^0.1.7",
     "minimist": "1.1.0",
-    "mocha": "^1.21.4",
+    "mocha": "^2.1.0",
     "node-bourbon": "1.2.3",
     "node-neat": "1.4.2",
     "run-sequence": "^1.0.2",
