--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "chai-as-promised": "^4.1.1",
     "coveralls": "^2.11.2",
     "del": "1.1",
-    "gulp": "3.8",
+    "gulp": "^3.8.11",
     "gulp-autoprefixer": "2.1.0",
     "gulp-compass": "2.0.3",
     "gulp-concat": "2.5.0",
