--- a/package.json
+++ b/package.json
@@ -59,6 +59,6 @@
   },
   "scripts": {
     "test": "gulp test --env dev",
-    "coveralls": "cat ./test/reports/coverage/*/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
+    "coveralls": "cat ./reports/coverage/*/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
   }
 }
