--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "karma-chrome-launcher": "^0.1.7",
     "karma-coverage": "^0.2.6",
     "karma-mocha": "^0.1.9",
+    "karma-ng-html2js-preprocessor": "^0.1.2",
     "karma-phantomjs-launcher": "^0.1.4",
     "karma-sinon": "^1.0.3",
     "karma-sinon-chai": "^0.3.0",
