--- a/bower.json
+++ b/bower.json
@@ -2,26 +2,27 @@
     "name": "finq",
     "version": "0.0.0",
     "dependencies": {
-        "angular": "1.3.6",
+        "angular": "~1.3.14",
         "json3": "~3.3.1",
+        "jquery-ui": "~1.11.3",
         "es5-shim": "~3.1.0",
-        "angular-resource": "1.3.6",
-        "angular-cookies": "1.3.6",
-        "angular-sanitize": "1.3.6",
-        "angular-animate": "~1.3.6",
-        "angular-touch": "1.3.6",
-        "angular-route": "1.3.6",
-        "angular-mocks": "~1.3.6",
+        "angular-resource": "~1.3.14",
+        "angular-cookies": "~1.3.14",
+        "angular-sanitize": "~1.3.14",
+        "angular-animate": "~1.3.14",
+        "angular-touch": "~1.3.14",
+        "angular-route": "~1.3.14",
+        "angular-mocks": "~1.3.14",
         "angular-translate": "~2.2.0",
         "angular-ui-router": "~0.2.10",
-        "angular-md5": "*",
+        "angular-md5": "~0.1.7",
         "components-font-awesome": "~4.1.0",
         "angular-typeahead": "~0.2.1",
         "hint.css": "~1.3.3"
     },
     "devDependencies": {
-        "angular-mocks": "1.3.6",
-        "angular-scenario": "1.3.6"
+        "angular-mocks": "~1.3.14",
+        "angular-scenario": "~1.3.14"
     },
     "appPath": "app",
     "resolutions": {
