--- a/app/scripts/config.json
+++ b/app/scripts/config.json
@@ -62,5 +62,8 @@
             "stepSuccessChance": 0.95,
             "stepFailChance": 0.05
         }
+    },
+    "editor": {
+        "maxStoryCache": 500
     }
 }
